--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,24 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="app_label">Recipeek</string>
+    <string name="search_hint">Search ingredients</string>
+
+    <string-array name="recipe_category">
+        <item>N/A</item>
+        <item>Main Dish</item>
+        <item>Starter</item>
+        <item>Desert</item>
+        <item>Drink</item>
+        <item>Sauce</item>
+    </string-array>
+    
+    <string-array name="food_type">
+        <item>N/A</item>
+        <item>Italian</item>
+        <item>Greek</item>
+        <item>Chinese</item>
+        <item>Colombian</item>
+        <item>Brazilian</item>
+    </string-array>
 </resources>
