--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Settings</string>
     <string name="app_label">Recipeek</string>
     <string name="search_hint">Search ingredients</string>
+    <string name="help">Help</string>
 
     <string-array name="recipe_category">
         <item>N/A</item>
