--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
         <item>Colombian</item>
         <item>Brazilian</item>
     </string-array>
+
+    <string-array name="boolean_operators">
+        <item>N/A</item>
+        <item>And</item>
+        <item>Or</item>
+        <item>Not</item>
+    </string-array>
 </resources>
